@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.TE.SAF</groupId>
-	<artifactId>SAF_MVN</artifactId>
+	<groupId>com.MIS.SAF</groupId>
+	<artifactId>METLIFE_MIS</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
@@ -29,7 +29,16 @@
 					<source />
 					<target />
 				</configuration>
+				
 			</plugin>
+			
+			<plugin>
+ <groupId>org.apache.maven.plugins</groupId>
+ <artifactId>maven-surefire-plugin</artifactId>
+ <configuration>
+    <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+  </configuration>
+</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -37,7 +46,7 @@
 				<version>2.21.0</version>
 				<configuration>
 				<suiteXmlFiles>
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<suiteXmlFile>test.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
@@ -205,6 +214,8 @@
     <artifactId>selenium-server</artifactId>
     <version>2.53.0</version>
 </dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
